Fixed spacing

--- a/css/Test.css
+++ b/css/Test.css
@@ -229,7 +229,7 @@
 */
 
 .filter-text {
-  padding-top: 40px;
+  padding-top: 70px;
   padding-bottom: 20px;
   width: 890px;
   border-bottom: 2px solid #E8C874;
